   the system. If yes - use it for converting string, if no - save string untouch
   and make warning about it. [Yury]
+ The attributename and nodename are now available in the editform.tpl and viewform.tpl 
  templates. [Peter, Dennis]
+ Added support for dialog render mode for atkViewHandler and atkAdminHandler. [Peter]
* Don't display letter as bold, if it don't use as index. [Yury] 
* Fix atkmlnumberattribute->validate method. (bug #883) [Yury]
* Fix saving new password to db after "password forgotten". (bug #819) [Yury]
* Fix and testcase for using number 0 as index for atklistattribute. (bug #723) [Yury]
* Fix and testcase for using searching number 0 in atknumberattribute field. (bug #726) [Yury]
* Fix display obligatory fields in integrated form. (bug #845) [Yury]
* Change hard coded "seq_" to atkConfig("database_sequenceprefix"). (bug #859) [michele.rota] [Yury]
* Fix Ajax calls handling of "umlauten" like ä,ü,ö. (bug #880) [Yury]
* Fix sql query fails when going back from viewing role of team member.
  (bug #757) [Yury]
* Fix multi referential keys support to hasOne. Example:
  $policy->hasOne("customer",array("source"=>array("obl_cd","cstmr_cd")));
  and obl_cd, cstmr_cd fields will be use as referential key. (bug #843)[Yury]
* Fix parameter order when setting link charset in mysql db driver. (bug#732)
  [Yury]
* Trim whitespace from string before stripQuotes (bug#752)  [Yury]
* Fix perforance issue in node->selectDb() method. We must firstly do cycle
  by postvars attribute, then cycle by recordlist. [Yury]
* Fix displaing manytomanyrelation with AF_READONLY flag after pressing
  'save' button. (bug #692) [Yury]
* Fix warning in node->callHandler() method. (bug #844) [Yury]
* Fix how metapolicy->_getTypeAndParams() determine atkboolattribute
  field. (bug #834) [Yury]
* Fix attribute->addDependee() method. Check exists dependee before add new
 one.  (bug #831) [Yury]
* Fix using $config_auth_database in class.auth_db.inc (bug #832) [Yury]